--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Roshni S</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Software Trainer</span></p>
-										<p><span class="title-s">Experience: </span> <span>1 Year 5 Months</span></p>
+										<p><span class="title-s">Experience: </span> <span>2 Year 7 Months</span></p>
 										<p><span class="title-s">Address: </span> <span>Moodalpalya, Bengaluru, India</span></p>
 									  </div>
 									</div>
@@ -267,14 +267,14 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>With over 1.5 years of comprehensive experience in the field of Software Development, accompanied by a bachelor's degree in Computer Science and engineering. 
+								<p>With over 2.7 years of comprehensive experience in the field of Software Development, accompanied by a bachelor's degree in Computer Science and engineering. 
 									Proficient in Java, SpringBoot, MicroServices, Full Stack Developments, &amp; Web Development. 
 									Demonstrated success in leading impactful projects and providing effective mentorship.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Software Developer &amp; Trainer</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Tamil &amp; Urdu</span></li>
-									<li class="d-flex"><span>Tools:</span> <span>MySQL, Eclipse, GitHub &amp; StackOverflow</span></li>
+									<li class="d-flex"><span>Tools:</span> <span>MySQL, GitHub &amp; StackOverflow</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>AngularJs, React.js, Agile &amp; Scrum</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Learning new Things, Teaching</span></li>
 									
@@ -303,11 +303,12 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>As a Software Trainer / Java Developer / Full Stack Development 1 year and 5 months. <br>
-				Training students and working professionals on programming languages like Core java, Advance Java, C/C++. <br>
-				Working on real time projects as per client requirements kind of freelancing on Full Stack Development. <br>
-				I am an adaptable person, Quick learner and have good problem solving skill. <br>
-				</p>
+            <p>As a Software Trainer / Java Developer / Full Stack Development 1 year and 2 months. <br>
+		Training students and working professionals on programming languages like Core java, Advance Java, C/C++. <br>
+		Working on real time projects as per client requirements kind of freelancing on Full Stack Development. <br>
+		As a process associate 1 year 5 months experience in documentation, Title/Mortgage process. <br>
+		I am an adaptable person, Quick learner and have good problem solving skill. <br>
+		</p>
           </div>
         </div>
 
@@ -326,7 +327,7 @@
 						<p class="mt-4">Role & Responsibility:
 							<ul>
 								<li>Software Development: Write clean, efficient, and well-documented Java code to develop, enhance, and maintain software applications. </li>
-								<li>Learning new courses like Networking, Hardware, CCNA and AWS Devops then provide training for the clients with live projects.</li>
+								<li>Learning new courses like Networking, Hardware, CCNA and Python then provide training for the clients with live projects.</li>
 							</ul>
 						</p>
 					</div>
