--- a/portfolio.html
+++ b/portfolio.html
@@ -163,6 +163,7 @@
 						'Java Developer  ',
 						'Full Stack Developer',
 						'Web Developer',
+						'QA Manual/Automation Tester',
 						];
 
 						// Create a function to display the typing animation for a given text
@@ -191,7 +192,7 @@
 			            <h4></h4>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://drive.google.com/file/d/1jbIw_CANGKXUBJPsePNBpskrsda_CLW-/view?usp=drive_link" class="btn btn-primary py-3 px-4">Resume</a> </p>
+			            <p><a href="https://drive.google.com/file/d/1KQ1l8Oxf2vlmSpkMO76FkHbrTGTxvUMx/view?usp=drivesdk" class="btn btn-primary py-3 px-4">Resume</a> </p>
 		            </div>
 		          </div>
 	        	</div>
@@ -206,18 +207,18 @@
             <h1 class="big">About</h1>
             <h2 class="mb-4">About Me</h2>
             
-            <p>With over 1.7 years of comprehensive experience in the field of Software Development, accompanied by a bachelor's degree in Computer Science and engineering. 
-                Proficient in Java, SpringBoot, MicroServices, Full Stack Developments, &amp; Web Development. 
+            <p>With over 3 years of comprehensive experience in the field of Software Development, accompanied by a bachelor's degree in Computer Science and engineering. 
+                Proficient in Java, SpringBoot, SQL, Full Stack Developments, &amp; Web Development. 
                 Demonstrated success in leading impactful projects and providing effective mentorship.</p>
-            <!-- <ul class="about-info mt-4 px-md-0 px-2">
+            <ul class="about-info mt-4 px-md-0 px-2">
                 <li class="d-flex"><span>Profile:</span> <span>Software Developer &amp; Trainer</span></li>
                 <li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
-                <li class="d-flex"><span>Language:</span> <span>English, Hindi, Tamil &amp; Urdu</span></li>
-                <li class="d-flex"><span>Tools:</span> <span>MySQL, Eclipse, GitHub &amp; StackOverflow</span></li>
+                <li class="d-flex"><span>Language:</span> <span>English, Hindi, Tamil, Urdu &amp; Kannada</span></li>
+                <li class="d-flex"><span>Tools:</span> <span>MySQL, Eclipse, GitHub, Postman &amp; StackOverflow</span></li>
                 <li class="d-flex"><span>Other Skills:</span> <span>AngularJs, React.js, Agile &amp; Scrum</span></li>
                 <li class="d-flex"><span>Interest:</span> <span>Traveling, Learning new Things, Teaching</span></li>
                 
-            </ul> -->
+            </ul> 
         </div>
     </div>
 
