--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>With over 2 years of comprehensive experience in the field of Software Development, accompanied by a bachelor's degree in Computer Science and engineering. 
+								<p>With over 2+ years of comprehensive experience in the field of Software Development, accompanied by a bachelor's degree in Computer Science and engineering. 
 									Proficient in Java, SpringBoot, MicroServices, Full Stack Developments, &amp; Web Development. 
 									Demonstrated success in leading impactful projects and providing effective mentorship.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
